--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
   </head>
-  <body ng-app="bitleagueClientApp">
+  <body ng-app="bitleagueClientApp" ng-controller="MainCtrl">
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
@@ -50,14 +50,14 @@
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
+    <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="//connect.facebook.net/en_US/sdk.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
-        <script src="scripts/controllers/home.controller.js"></script>
-        <script src="scripts/controllers/login.controller.js"></script>
-        <script src="scripts/controllers/about.controller.js"></script>
-        <!-- endbuild -->
-</body>
+        <script src="scripts/services/facebook.service.js"></script>
+        <script src="scripts/controllers/main.controller.js"></script>
+  </body>
 </html>
