--- a/app/index.html
+++ b/app/index.html
@@ -60,5 +60,6 @@
         <script src="scripts/services/facebook.service.js"></script>
         <script src="scripts/controllers/main.controller.js"></script>
         <script src="scripts/controllers/login.controller.js"></script>
+        <script src="scripts/controllers/userpage.controller.js"></script>
   </body>
 </html>
