--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,8 @@
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/responsive.css">
+    <link rel="stylesheet" href="styles/sortable.css">
+
     <!-- endbuild -->
   </head>
   <body ng-app="bitleagueClientApp" ng-controller="MainCtrl">
@@ -54,6 +56,7 @@
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="bower_components/jquery-ui/jquery-ui.js"></script>
     <script src="bower_components/angular-dragdrop/src/angular-dragdrop.js"></script>
+    <script src="bower_components/angular-ui-sortable/sortable.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -64,5 +67,8 @@
         <script src="scripts/controllers/main.controller.js"></script>
         <script src="scripts/controllers/login.controller.js"></script>
         <script src="scripts/controllers/userpage.controller.js"></script>
+        <script src="scripts/controllers/drag.controller.js"></script>
+        <script src="scripts/controllers/table.controller.js"></script>
+        <script src="scripts/controllers/sortable.controller.js"></script>
   </body>
 </html>
