Work on draft. Added ngWebsockets.

--- a/app/index.html
+++ b/app/index.html
@@ -57,6 +57,7 @@
     <script src="bower_components/jquery-ui/jquery-ui.js"></script>
     <script src="bower_components/angular-dragdrop/src/angular-dragdrop.js"></script>
     <script src="bower_components/angular-ui-sortable/sortable.js"></script>
+    <script src="bower_components/ng-websocket/ng-websocket.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -70,5 +71,7 @@
         <script src="scripts/controllers/drag.controller.js"></script>
         <script src="scripts/controllers/table.controller.js"></script>
         <script src="scripts/controllers/sortable.controller.js"></script>
+        <script src="scripts/controllers/draft.controller.js"></script>
+
   </body>
 </html>
