Created draft service.

--- a/app/index.html
+++ b/app/index.html
@@ -64,6 +64,7 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/routes.js"></script>
         <script src="scripts/services/facebook.service.js"></script>
+        <script src="scripts/services/draft.service.js"></script>
         <script src="scripts/controllers/main.controller.js"></script>
         <script src="scripts/controllers/login.controller.js"></script>
         <script src="scripts/controllers/userpage.controller.js"></script>
