--- a/app/index.html
+++ b/app/index.html
@@ -72,6 +72,7 @@
         <script src="scripts/controllers/table.controller.js"></script>
         <script src="scripts/controllers/sortable.controller.js"></script>
         <script src="scripts/controllers/draft.controller.js"></script>
+        <script src="scripts/controllers/league.controller.js"></script>
 
   </body>
 </html>
