table with pagination

--- a/app/index.html
+++ b/app/index.html
@@ -63,6 +63,7 @@
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/routes.js"></script>
+        <script src="scripts/dirPagination.js"></script>
         <script src="scripts/services/facebook.service.js"></script>
         <script src="scripts/services/draft.service.js"></script>
         <script src="scripts/controllers/main.controller.js"></script>
