--- a/app/index.html
+++ b/app/index.html
@@ -72,6 +72,7 @@
         <script src="scripts/controllers/login.controller.js"></script>
         <script src="scripts/controllers/userpage.controller.js"></script>
         <script src="scripts/controllers/drag.controller.js"></script>
+        <script src="scripts/controllers/team_management.controller.js"></script>
         <script src="scripts/controllers/table.controller.js"></script>
         <script src="scripts/controllers/sortable.controller.js"></script>
         <script src="scripts/controllers/draft.controller.js"></script>
