first version of draft_beautify done

--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="styles/responsive.css">
     <link rel="stylesheet" href="styles/sortable.css">
 
+    <link rel = "stylesheet" href = "styles/draft.css"/>
 
 
     <!-- endbuild -->
