--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="styles/responsive.css">
     <link rel="stylesheet" href="styles/sortable.css">
 
+    <link rel = "stylesheet" href = "styles/home.css"/>
     <link rel = "stylesheet" href = "styles/draft.css"/>
 
 
@@ -29,9 +30,7 @@
     <!-- Add your site or application content here -->
     <div ng-include="'views/partials/header.html'"></div>
 
-    <div class="container-fluid">
-      <div ui-view></div>
-    </div>
+    <div ui-view></div>
 
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
