Work on matchday posting and admin page.

--- a/app/index.html
+++ b/app/index.html
@@ -80,6 +80,7 @@
         <script src="scripts/controllers/sortable.controller.js"></script>
         <script src="scripts/controllers/draft.controller.js"></script>
         <script src="scripts/controllers/league.controller.js"></script>
+        <script src="scripts/controllers/admin.controller.js"></script>
 
 
   </body>
