--- a/app/index.html
+++ b/app/index.html
@@ -69,6 +69,7 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/routes.js"></script>
         <script src="scripts/dirPagination.js"></script>
+        <script src="scripts/sideMenu.js"></script>
         <script src="scripts/services/facebook.service.js"></script>
         <script src="scripts/controllers/main.controller.js"></script>
         <script src="scripts/controllers/login.controller.js"></script>
