user page css done

--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="styles/sortable.css">
 
     <link rel = "stylesheet" href = "styles/draft.css"/>
+    <link rel = "stylesheet" href = "styles/userpage.css"/>
 
 
     <!-- endbuild -->
