--- a/app/index.html
+++ b/app/index.html
@@ -66,6 +66,8 @@
     <script src="bower_components/angular-utils-pagination/dirPagination.js"></script>
     <!-- endbower -->
 
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.6/ngStorage.min.js"></script>
+
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/routes.js"></script>
