--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html class="no-js">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>BitLeague</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -12,14 +12,13 @@
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/font-awesome.min.css">
-    <link rel="stylesheet" href="styles/main.css">
+    <!--<link rel="stylesheet" href="styles/main.css">-->
     <link rel="stylesheet" href="styles/responsive.css">
-    <link rel="stylesheet" href="styles/sortable.css">
+    <!--<link rel="stylesheet" href="styles/sortable.css">-->
     <link rel="stylesheet" href="styles/animate.css">
 
+    <!-- this file import all the others for loading optimization -->
     <link rel = "stylesheet" href = "styles/draft.css"/>
-    <link rel = "stylesheet" href = "styles/userpage.css"/>
-    <link rel = "stylesheet" href = "styles/home.css"/>
 
 
     <!-- endbuild -->
