--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="styles/animate.css">
 
     <!-- this file import all the others for loading optimization -->
-    <link rel = "stylesheet" href = "styles/draft.css"/>
+    <link rel = "stylesheet" href = "styles/league.css"/>
 
 
     <!-- endbuild -->
