--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,7 @@
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
+    <link rel="stylesheet" href="bower_components/AngularJS-Toaster/toaster.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -27,6 +28,8 @@
 
     <div ui-view ng-if="location.path() == '/userpage'" class="duotone4"></div>
     <div ui-view ng-if="location.path() != '/userpage'"></div>
+
+    <toaster-container toaster-options="{'time-out': 3000, 'position-class': 'toast-bottom-right'}"></toaster-container>
 
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
@@ -61,6 +64,7 @@
     <script src="bower_components/ng-websocket/ng-websocket.js"></script>
     <script src="bower_components/angular-utils-pagination/dirPagination.js"></script>
     <script src="bower_components/angular-scroll-animate/dist/angular-scroll-animate.js"></script>
+    <script src="bower_components/AngularJS-Toaster/toaster.js"></script>
     <!-- endbower -->
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
